libycp/testsuite/tests/types/functionassign.ycp
{
  integer one () { return 1; }

  integer two () { return 2; }

  one = two;	// error
}
